docs: Add sonarqube to tools README, fix table alignment in pmd/scripts READMEs

--- a/tools/template/report.css
+++ b/tools/template/report.css
@@ -465,6 +465,7 @@ tr[data-detail] {
 
 .snippet .offense .codeline {
   font-weight: 700;
+  margin-left: -9px;
 }
 
 /* ---- Collapsible Sections ---- */
